# SimpleFTP

./: CMakeLists.txt  README.md  client.cpp  server.cpp
